--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "firebase": "~2.0.4",
+    "angularfire": "~0.9.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
