--- a/.jshintrc
+++ b/.jshintrc
@@ -20,6 +20,7 @@
   "globals": {
     "angular": false,
     "Firebase": false,
-    "FIREBASE_URL": true
+    "FIREBASE_URL": true,
+    "$": false
   }
 }
